--- a/src/Component/pokemon.css
+++ b/src/Component/pokemon.css
@@ -24,11 +24,10 @@ h6 {
 }
 
 h1 {
-    font-size: 3.4rem;
+    font-size: 5.4rem;
     font-weight: bold;
     color: #000 !important;
     text-align: center;
-    margin-top: 3rem;
 }
 
 p,
@@ -89,14 +88,18 @@ input[type="text"] {
     padding: 0.8em;
     font-size: 1.6rem;
     color: #000000;
+    -webkit-border-radius: 0.2em 0.2em 0 0;
+    -moz-border-radius: 0.2em 0.2em 0 0;
+    -ms-border-radius: 0.2em 0.2em 0 0;
+    -o-border-radius: 0.2em 0.2em 0 0;
 }
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(3, 0.3fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
-    gap: 2.7rem;
+    gap: 3.2rem;
 }
 
 .pokemon-card {
@@ -106,8 +109,53 @@ input[type="text"] {
         rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     background-color: #fff;
     border-radius: 0.2rem;
+    -webkit-border-radius: 0.2rem;
+    -moz-border-radius: 0.2rem;
+    -ms-border-radius: 0.2rem;
+    -o-border-radius: 0.2rem;
     padding: 1.6rem;
     position: relative;
+}
+
+.pokemon-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    transform: rotate(180deg);
+    background-color: #ebfbf1;
+    border-radius: 50% 50% 100% 0% / 99% 100% 0% 1%;
+    z-index: 0;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    -webkit-border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    -moz-border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    -ms-border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    -o-border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.pokemon-card:hover::before {
+    -webkit-border-radius: 50% 50% 100% 0% / 99% 100% 0% 1%;
+    -moz-border-radius: 50% 50% 100% 0% / 99% 100% 0% 1%;
+    -ms-border-radius: 50% 50% 100% 0% / 99% 100% 0% 1%;
+    -o-border-radius: 50% 50% 100% 0% / 99% 100% 0% 1%;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+
+.pokemon-card:hover {
+    transform: scale(1.03);
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 figure {
@@ -135,6 +183,10 @@ figure {
         padding: 0.6rem 2.4rem;
         background-color: #2ecc71;
         border-radius: 20rem;
+        -webkit-border-radius: 20rem;
+        -moz-border-radius: 20rem;
+        -ms-border-radius: 20rem;
+        -o-border-radius: 20rem;
         color: #fff;
         font-weight: bold;
         text-transform: capitalize;
@@ -146,7 +198,7 @@ figure {
     height: 15rem;
 }
 
-.pokemon-info {
+pokemon-info {
     text-align: center;
 }
 
