--- a/src/Component/pokemon.css
+++ b/src/Component/pokemon.css
@@ -24,10 +24,11 @@ h6 {
 }
 
 h1 {
-    font-size: 5.4rem;
+    font-size: 3.4rem;
     font-weight: bold;
     color: #000 !important;
     text-align: center;
+    margin-top: 3rem;
 }
 
 p,
@@ -96,7 +97,7 @@ input[type="text"] {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 0.3fr);
     justify-content: center;
     align-items: center;
     gap: 3.2rem;
@@ -157,7 +158,7 @@ figure {
     height: 15rem;
 }
 
-pokemon-info {
+.pokemon-info {
     text-align: center;
 }
 
