--- a/src/Component/pokemon.css
+++ b/src/Component/pokemon.css
@@ -67,6 +67,10 @@ header {
     display: flex;
     justify-content: center;
     margin-bottom: 3.2rem;
+    gap: 10px;
+}
+.filter-icon{
+    cursor: pointer;
 }
 
 .card-demo {
@@ -89,10 +93,6 @@ input[type="text"] {
     padding: 0.8em;
     font-size: 1.6rem;
     color: #000000;
-    -webkit-border-radius: 0.2em 0.2em 0 0;
-    -moz-border-radius: 0.2em 0.2em 0 0;
-    -ms-border-radius: 0.2em 0.2em 0 0;
-    -o-border-radius: 0.2em 0.2em 0 0;
 }
 
 .cards {
@@ -110,10 +110,6 @@ input[type="text"] {
         rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     background-color: #fff;
     border-radius: 0.2rem;
-    -webkit-border-radius: 0.2rem;
-    -moz-border-radius: 0.2rem;
-    -ms-border-radius: 0.2rem;
-    -o-border-radius: 0.2rem;
     padding: 1.6rem;
     position: relative;
 }
@@ -143,10 +139,6 @@ figure {
         padding: 0.6rem 2.4rem;
         background-color: #2ecc71;
         border-radius: 20rem;
-        -webkit-border-radius: 20rem;
-        -moz-border-radius: 20rem;
-        -ms-border-radius: 20rem;
-        -o-border-radius: 20rem;
         color: #fff;
         font-weight: bold;
         text-transform: capitalize;
