--- a/src/Component/pokemon.css
+++ b/src/Component/pokemon.css
@@ -178,7 +178,7 @@ figure {
     }
 }
 
-.filter-section{
+.filter-section {
     display: flex;
     align-items: center;
 }
@@ -207,6 +207,7 @@ option {
     .cards {
         grid-template-columns: repeat(2, 1fr);
     }
+
     .card-section {
         display: flex;
         margin: auto;
@@ -222,4 +223,31 @@ option {
     .cards {
         grid-template-columns: 1fr;
     }
+}
+
+.loader {
+    width: 50px;
+    padding: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #25b09b;
+    --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.loader-section {
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
